static/index.css
#lan_selector {
    display: flex;
    justify-self: flex-end;
    margin-right: 2rem;
    align-items: center;
    gap: 2rem;
    padding-top: .5rem;
}

#lan_selector>a {
    margin-bottom: 0;
}

#lan_selector>a>img {
    max-height: 100px;
    height: 5vh;
    min-height: 40px;
    transition: .4s;
}

#lan_selector>a>img:hover {
    transform: scale(1.25) rotate(10deg);
    transition: .2s;
}

#theme_selector {
    display: flex;
    margin-left: .5rem;
}

.flex-row {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

.flex-column {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    gap: 16px;
    width: 95%;
    margin: auto;
}

.flex-item,
.contact-item {
    position: relative;
    display: flex;
    justify-content: baseline;
    flex-direction: column;
    align-content: flex-start;
    flex-grow: 1;
    flex-basis: 0;
}

.flex-responsive {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    gap: 16px;
}

#flex-comment-section {
    display: flex;
    flex-direction: column;
    justify-content: space-evenly;
    align-items: center;
    gap: 10px;
}

.flex-comment {
    display: flex;
    justify-content: baseline;
    flex-direction: column;
    align-content: flex-start;
    width: calc(100% - 6px);
}

.comment-title {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

#load-more-comments-button {
	height: 10ch;
	width: 30ch;
}

#total-comments-number-text {
    align-self: center;
}

#insert-comment-section {
    display: flex;
    gap: 10px;
    flex-direction: column;
}

@media only screen and (max-width: 730px) {
    
    .flex-responsive {
        flex-direction: column;
        justify-content: space-around;
        justify-self: center;
    }
    

    .contact-item img {
        width: 5%;
    }

    .contact-item a {
        display: flex;
        justify-content: center;
        align-items: center;
    }
}

.contact-item img {
    width: clamp(3.5rem ,15%, 100rem);
}

.contact-item a {
    display: flex;
    justify-content: center;
    align-items: center;
    margin:0;
}

@media not (pointer: fine) {
    #has-mouse {
        --has-mouse:false;
    }
}
@media (pointer: fine) {
    #has-mouse {
        --has-mouse:true;
    }
}

footer {
    width: 100%;
    text-align: center;
    margin-bottom: 2px;
}

